# recon

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
docs/: 00-Plan.md  10-MVP-Workbench.md  100-Packaging-And-Installer.md  110-Request-Logs-And-Streaming.md  120-Gateway-and-Service-Layer.md  130-Gateway-Implementation.md  140-Multi-Provider-Routing.md  150-Skill-Pipeline.md  160-Gateway-Review.md  170-Gateway-Observability.md  180-Provider-Resilience.md  190-Skill-Execution-Phases.md  20-Tooling-and-Workspace.md  200-Gateway-Metrics-And-Costs.md  200-Gateway-Request-Analytics.md  210-Gateway-Provider-Operations.md  210-Provider-Health-And-Reset.md  220-Gateway-Adapter-Boundary.md  220-Gateway-Provider-Adapters.md  230-Gateway-Admin-Panel.md  240-Streaming-Error-Handling.md  250-Gateway-Error-Handling-Review.md  260-Gateway-Error-Classification.md  270-Gateway-Provider-Error-Policy.md  280-Scenario-Library.md  290-Attachments-And-Rich-Content.md  30-Project-Metadata-and-State.md  300-Desktop-Attachment-Model.md  310-UI-Component-Glossary.md  320-Gateway-Link-Preview.md  330-Generic-Assistant-Platform.md  340-Memory-Model.md  350-Task-Runtime.md  360-Knowledge-System.md  370-Safety-And-Permissions.md  380-Evaluation-And-Quality.md  390-Identity-And-Collaboration.md  40-Chat-UX.md  400-Channels-And-Integrations.md  410-Agentic-System-Landscape-Tracker.md  (+18 more)
packaging/windows/: darkfactory.iss  darkfactory.spec  recon.iss  recon.spec
scripts/: compare_providers.py  package_windows.ps1
tests/: test_gateway.py  test_services.py  test_storage.py  test_ui.py
(+34 files in other folders)
