[project]
name = "darkfactory"
version = "0.1.0"
description = "Python + Qt desktop scaffold for an energy AI console."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
