[project]
name = "recon"
version = "0.1.0"
description = "Python + Qt desktop scaffold for an energy AI console."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.8",
    "httpx>=0.28",
    "fastapi>=0.116",
    "uvicorn>=0.35",
]

[project.scripts]
recon = "recon.app:main"
recon-gateway = "recon_gateway.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
